# geo_decoder2

./: README.md
src/: geo_decoder2.c  geo_decoder2.h  geo_decoder2_platform.h  geo_decoder2_type.h
src/SHARED/: CMakeLists.txt
src/STATIC/: CMakeLists.txt
src/conan_profiles/: android-arm-v7  android-arm64-v8  android-x86  android-x86_64  default_win32  default_win64  ios  macOS  win32  windows64
